2004-02-08  Ben Elliston  <bje@wasabisystems.com>

	* configure.ac: Quote strings throughout in good Autoconf style.
	Remove AC_PROG_YACC invocation. Search for docbook2dvi, et al and
	expect using AC_PATH_PROG. Remove DJ_AC_PATH_DOCBOOK in favour of
	existing macros. Remove stale BOARDS and CONFIG substs. Ensure Tcl
	is at version 8.3 or greater.
	* configure: Regenerate.
	* acinclude.m4: Remove.
	* aclocal.m4: Regenerate.
	* Makefile.in: Likewise.
	* doc/Makefile.am (%.pdf: %.sgml): Use $(DOCBOOK2PDF).
	(%.dvi: %.sgml): Use $(DOCBOOK2DVI).
	(%.html: %.sgml): Use $(DOCBOOK2HTML).
	* doc/Makefile.in: Regenerate.
	* example/Makefile.in: Likewise.
	* testsuite/Makefile.in: Likewise.
	* testsuite/libdejagnu/Makefile.in: Likewise.
	* TODO: Update.

2004-02-08  Daniel Jacobowitz  <drow@mvista.com>

	* baseboards/cf.exp: Use -T instead of -Wl,-T for ldscript.
	* baseboards/fr30-elf.exp, baseboards/frv-elf.exp,
	baseboards/h8300.exp, baseboards/i960-cyclone.exp,
	baseboards/i960-sim.exp, baseboards/m32r-elf.exp,
	baseboards/mips-idt.exp, baseboards/mips-lnews-sim.exp,
	baseboards/mips-lsi-sim.exp, baseboards/mips64vr4100-sim.exp,
	baseboards/op50n.exp, baseboards/rom68k-idp.exp,
	baseboards/sh-hms.exp, baseboards/tx39-dve.exp,
	baseboards/vr4100-ddb.exp, baseboards/vr4100-sim.exp,
	baseboards/vr4111-sim.exp, baseboards/vr4300-ddb.exp,
	baseboards/vr4300-sim.exp, baseboards/vr4300.exp,
	baseboards/vr5000-ddb.exp: Likewise.

2004-02-08  Ben Elliston  <bje@wasabisystems.com>

	* runtest: Terminate with an error if expect cannot be found.
	* TODO: Update.

2004-02-08  Ben Elliston  <bje@wasabisystems.com>

	* configure.ac: Use AC_PATH_PROG to find expect(1).
	(DJ_AC_PATH_TCLSH): Remove unneeded invocation.
	* acinclude.m4 (DJ_AC_PATH_TCLSH): Remove.
	(DJ_AC_STL): Likewise.
	* configure: Regenerate.
	* aclocal.m4: Likewise.
	* configure: Likewise.
	* Makefile.in: Likewise.
	* doc/Makefile.in: Likewise.
	* example/Makefile.in: Likewise.
	* testsuite/Makefile.in: Likewise.