@@ -1,3 +1,9 @@
+2004-02-09  Ben Elliston  <bje@wasabisystems.com>
+
+	* TODO: Update.
+
+	* testsuite/libdejagnu/unit.cc: Conform with GNU coding standard.
+
 2004-02-08  Ben Elliston  <bje@wasabisystems.com>
 
 	* configure.ac: Quote strings throughout in good Autoconf style.
